--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+    implementation(
+            'org.springframework.boot:spring-boot-starter-thymeleaf',
+            'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+    )
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
